fixed alignment of video player

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -25,7 +25,6 @@ body {
 .container {
   width: 100%;
   height: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
